// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prepare names changes list snapshot 1`] = `
Object {
  "allcash_0": Object {
    "endDate": "01.01.2100 23:59",
    "fromDate": "01.09.2023 10:22",
    "id": "1",
  },
  "beda_0": Object {
    "endDate": "03.05.2023 02:05",
    "fromDate": "03.02.2023 02:05",
    "id": "2",
  },
  "borigen_0": Object {
    "endDate": "01.01.2100 23:59",
    "fromDate": "08.04.2023 22:03",
    "id": "4",
  },
  "callisto1_0": Object {
    "endDate": "20.12.2022 12:45",
    "fromDate": "01.01.1970 00:00",
    "id": "1",
  },
  "kanistra_0": Object {
    "endDate": "01.09.2023 10:22",
    "fromDate": "30.06.2023 08:29",
    "id": "1",
  },
  "londor_0": Object {
    "endDate": "03.03.2023 02:05",
    "fromDate": "01.01.1970 00:00",
    "id": "3",
  },
  "londor_1": Object {
    "endDate": "01.01.2100 23:59",
    "fromDate": "03.04.2023 02:05",
    "id": "3",
  },
  "markovnik_0": Object {
    "endDate": "08.04.2023 22:03",
    "fromDate": "01.01.1970 00:00",
    "id": "4",
  },
  "morpex_0": Object {
    "endDate": "26.12.2022 19:01",
    "fromDate": "12.11.2022 03:21",
    "id": "0",
  },
  "neon_0": Object {
    "endDate": "03.02.2023 02:05",
    "fromDate": "01.01.1970 00:00",
    "id": "2",
  },
  "neon_1": Object {
    "endDate": "03.04.2023 02:05",
    "fromDate": "03.03.2023 02:05",
    "id": "3",
  },
  "neon_2": Object {
    "endDate": "01.01.2100 23:59",
    "fromDate": "03.05.2023 02:05",
    "id": "2",
  },
  "outkast_0": Object {
    "endDate": "30.06.2023 08:29",
    "fromDate": "20.12.2022 12:45",
    "id": "1",
  },
  "parker_0": Object {
    "endDate": "12.11.2022 03:21",
    "fromDate": "01.01.1970 00:00",
    "id": "0",
  },
  "parker_1": Object {
    "endDate": "01.01.2100 23:59",
    "fromDate": "26.12.2022 19:01",
    "id": "0",
  },
}
`;

exports[`getPlayerId func should work correctly Name change and then change back to the same name should work correctly 1`] = `
Array [
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 1,
          "total": 1,
        },
        "endDate": "2023-01-01T23:59:59.999Z",
        "kdRatio": 4,
        "kills": 4,
        "killsFromVehicle": 3,
        "killsFromVehicleCoef": 0.75,
        "score": 4,
        "startDate": "2022-12-26T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2022-52",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 1,
        },
        "endDate": "2022-11-13T23:59:59.999Z",
        "kdRatio": 3,
        "kills": 3,
        "killsFromVehicle": 1,
        "killsFromVehicleCoef": 0.33,
        "score": 1.5,
        "startDate": "2022-11-07T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 2,
        "vehicleKills": 0,
        "week": "2022-45",
      },
    ],
    "deaths": Object {
      "byTeamkills": 1,
      "total": 2,
    },
    "id": "0",
    "isShow": true,
    "kdRatio": 7,
    "killed": Array [
      Object {
        "count": 7,
        "id": "killed_name",
        "name": "killed_name",
      },
    ],
    "killers": Array [
      Object {
        "count": 1,
        "id": "killer_name",
        "name": "killer_name",
      },
    ],
    "kills": 7,
    "killsFromVehicle": 4,
    "killsFromVehicleCoef": 0.57,
    "lastPlayedGameDate": "2022-12-30T18:00:00.000Z",
    "lastSquadPrefix": "[W8]",
    "name": "Parker",
    "teamkilled": Array [],
    "teamkillers": Array [
      Object {
        "count": 1,
        "id": "teamkiller_name",
        "name": "teamkiller_name",
      },
    ],
    "teamkills": 0,
    "totalPlayedGames": 3,
    "totalScore": 3.5,
    "vehicleKills": 0,
    "vehicles": Array [
      Object {
        "kills": 4,
        "maxDistance": 100,
        "name": "BTR",
      },
    ],
    "weapons": Array [
      Object {
        "kills": 3,
        "maxDistance": 100,
        "name": "M4A1",
      },
    ],
  },
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "endDate": "2022-11-13T23:59:59.999Z",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 0,
        "startDate": "2022-11-07T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2022-45",
      },
    ],
    "deaths": Object {
      "byTeamkills": 0,
      "total": 0,
    },
    "id": "stolfo",
    "isShow": true,
    "kdRatio": 0,
    "killed": Array [],
    "killers": Array [],
    "kills": 0,
    "killsFromVehicle": 0,
    "killsFromVehicleCoef": 0,
    "lastPlayedGameDate": "2022-11-12T18:00:00.000Z",
    "lastSquadPrefix": "[A]",
    "name": "stolfo",
    "teamkilled": Array [],
    "teamkillers": Array [],
    "teamkills": 0,
    "totalPlayedGames": 1,
    "totalScore": 0,
    "vehicleKills": 0,
    "vehicles": Array [],
    "weapons": Array [],
  },
]
`;

exports[`getPlayerId func should work correctly Name change collision after name change and before change back should be handled correctly 1`] = `
Array [
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 1,
        },
        "endDate": "2023-05-07T23:59:59.999Z",
        "kdRatio": 3,
        "kills": 3,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 3,
        "startDate": "2023-05-01T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-18",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "endDate": "2023-03-05T23:59:59.999Z",
        "kdRatio": 2,
        "kills": 2,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 2,
        "startDate": "2023-02-27T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-09",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 1,
          "total": 1,
        },
        "endDate": "2023-01-29T23:59:59.999Z",
        "kdRatio": 5,
        "kills": 5,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 5,
        "startDate": "2023-01-23T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-04",
      },
    ],
    "deaths": Object {
      "byTeamkills": 1,
      "total": 2,
    },
    "id": "3",
    "isShow": true,
    "kdRatio": 10,
    "killed": Array [
      Object {
        "count": 10,
        "id": "killed_name",
        "name": "killed_name",
      },
    ],
    "killers": Array [
      Object {
        "count": 1,
        "id": "killer_name",
        "name": "killer_name",
      },
    ],
    "kills": 10,
    "killsFromVehicle": 0,
    "killsFromVehicleCoef": 0,
    "lastPlayedGameDate": "2023-05-05T18:00:00.000Z",
    "lastSquadPrefix": "[A]",
    "name": "Londor",
    "teamkilled": Array [],
    "teamkillers": Array [
      Object {
        "count": 1,
        "id": "teamkiller_name",
        "name": "teamkiller_name",
      },
    ],
    "teamkills": 0,
    "totalPlayedGames": 3,
    "totalScore": 5,
    "vehicleKills": 0,
    "vehicles": Array [],
    "weapons": Array [
      Object {
        "kills": 10,
        "maxDistance": 100,
        "name": "M4A1",
      },
    ],
  },
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 1,
        },
        "endDate": "2023-05-07T23:59:59.999Z",
        "kdRatio": 2,
        "kills": 2,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 2,
        "startDate": "2023-05-01T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-18",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 1,
        },
        "endDate": "2023-03-05T23:59:59.999Z",
        "kdRatio": 2,
        "kills": 2,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 2,
        "startDate": "2023-02-27T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-09",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "endDate": "2023-01-29T23:59:59.999Z",
        "kdRatio": 1,
        "kills": 1,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 1,
        "startDate": "2023-01-23T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-04",
      },
    ],
    "deaths": Object {
      "byTeamkills": 0,
      "total": 2,
    },
    "id": "2",
    "isShow": true,
    "kdRatio": 2.5,
    "killed": Array [
      Object {
        "count": 5,
        "id": "killed_name",
        "name": "killed_name",
      },
    ],
    "killers": Array [
      Object {
        "count": 2,
        "id": "killer_name",
        "name": "killer_name",
      },
    ],
    "kills": 5,
    "killsFromVehicle": 0,
    "killsFromVehicleCoef": 0,
    "lastPlayedGameDate": "2023-05-05T18:00:00.000Z",
    "lastSquadPrefix": "[W8]",
    "name": "neon",
    "teamkilled": Array [],
    "teamkillers": Array [],
    "teamkills": 0,
    "totalPlayedGames": 3,
    "totalScore": 1.67,
    "vehicleKills": 0,
    "vehicles": Array [],
    "weapons": Array [
      Object {
        "kills": 5,
        "maxDistance": 100,
        "name": "M4A1",
      },
    ],
  },
]
`;

exports[`getPlayerId func should work correctly Name change should work correctly 1`] = `
Array [
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 1,
          "total": 1,
        },
        "endDate": "2023-04-16T23:59:59.999Z",
        "kdRatio": 7,
        "kills": 7,
        "killsFromVehicle": 4,
        "killsFromVehicleCoef": 0.57,
        "score": 7,
        "startDate": "2023-04-10T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-15",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 1,
        },
        "endDate": "2023-04-09T23:59:59.999Z",
        "kdRatio": 3,
        "kills": 3,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 3,
        "startDate": "2023-04-03T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-14",
      },
    ],
    "deaths": Object {
      "byTeamkills": 1,
      "total": 2,
    },
    "id": "4",
    "isShow": true,
    "kdRatio": 10,
    "killed": Array [
      Object {
        "count": 10,
        "id": "killed_name",
        "name": "killed_name",
      },
    ],
    "killers": Array [
      Object {
        "count": 1,
        "id": "killer_name",
        "name": "killer_name",
      },
    ],
    "kills": 10,
    "killsFromVehicle": 4,
    "killsFromVehicleCoef": 0.4,
    "lastPlayedGameDate": "2023-04-14T18:00:00.000Z",
    "lastSquadPrefix": "[A]",
    "name": "borigen",
    "teamkilled": Array [],
    "teamkillers": Array [
      Object {
        "count": 1,
        "id": "teamkiller_name",
        "name": "teamkiller_name",
      },
    ],
    "teamkills": 0,
    "totalPlayedGames": 2,
    "totalScore": 10,
    "vehicleKills": 0,
    "vehicles": Array [
      Object {
        "kills": 4,
        "maxDistance": 100,
        "name": "BTR",
      },
    ],
    "weapons": Array [
      Object {
        "kills": 6,
        "maxDistance": 100,
        "name": "M4A1",
      },
    ],
  },
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "endDate": "2023-04-16T23:59:59.999Z",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 0,
        "startDate": "2023-04-10T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-15",
      },
    ],
    "deaths": Object {
      "byTeamkills": 0,
      "total": 0,
    },
    "id": "stolfo",
    "isShow": true,
    "kdRatio": 0,
    "killed": Array [],
    "killers": Array [],
    "kills": 0,
    "killsFromVehicle": 0,
    "killsFromVehicleCoef": 0,
    "lastPlayedGameDate": "2023-04-14T18:00:00.000Z",
    "lastSquadPrefix": "[A]",
    "name": "stolfo",
    "teamkilled": Array [],
    "teamkillers": Array [],
    "teamkills": 0,
    "totalPlayedGames": 1,
    "totalScore": 0,
    "vehicleKills": 0,
    "vehicles": Array [],
    "weapons": Array [],
  },
]
`;

exports[`getPlayerId func should work correctly Name changes sequence should work correctly 1`] = `
Array [
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 1,
          "total": 1,
        },
        "endDate": "2023-09-03T23:59:59.999Z",
        "kdRatio": 4,
        "kills": 4,
        "killsFromVehicle": 4,
        "killsFromVehicleCoef": 1,
        "score": 4,
        "startDate": "2023-08-28T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-35",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 1,
        },
        "endDate": "2023-07-02T23:59:59.999Z",
        "kdRatio": 3,
        "kills": 3,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 3,
        "startDate": "2023-06-26T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-26",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 1,
          "total": 1,
        },
        "endDate": "2023-04-23T23:59:59.999Z",
        "kdRatio": 2,
        "kills": 2,
        "killsFromVehicle": 1,
        "killsFromVehicleCoef": 0.5,
        "score": 2,
        "startDate": "2023-04-17T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-16",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "endDate": "2022-12-18T23:59:59.999Z",
        "kdRatio": 1,
        "kills": 1,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 1,
        "startDate": "2022-12-12T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2022-50",
      },
    ],
    "deaths": Object {
      "byTeamkills": 2,
      "total": 3,
    },
    "id": "1",
    "isShow": true,
    "kdRatio": 10,
    "killed": Array [
      Object {
        "count": 10,
        "id": "killed_name",
        "name": "killed_name",
      },
    ],
    "killers": Array [
      Object {
        "count": 1,
        "id": "killer_name",
        "name": "killer_name",
      },
    ],
    "kills": 10,
    "killsFromVehicle": 5,
    "killsFromVehicleCoef": 0.5,
    "lastPlayedGameDate": "2023-09-01T18:00:00.000Z",
    "lastSquadPrefix": "[W8]",
    "name": "AllCash",
    "teamkilled": Array [],
    "teamkillers": Array [
      Object {
        "count": 2,
        "id": "teamkiller_name",
        "name": "teamkiller_name",
      },
    ],
    "teamkills": 0,
    "totalPlayedGames": 4,
    "totalScore": 5,
    "vehicleKills": 0,
    "vehicles": Array [
      Object {
        "kills": 5,
        "maxDistance": 100,
        "name": "BTR",
      },
    ],
    "weapons": Array [
      Object {
        "kills": 5,
        "maxDistance": 100,
        "name": "M4A1",
      },
    ],
  },
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "endDate": "2023-04-23T23:59:59.999Z",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 0,
        "startDate": "2023-04-17T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-16",
      },
    ],
    "deaths": Object {
      "byTeamkills": 0,
      "total": 0,
    },
    "id": "stolfo",
    "isShow": true,
    "kdRatio": 0,
    "killed": Array [],
    "killers": Array [],
    "kills": 0,
    "killsFromVehicle": 0,
    "killsFromVehicleCoef": 0,
    "lastPlayedGameDate": "2023-04-23T18:00:00.000Z",
    "lastSquadPrefix": "[A]",
    "name": "stolfo",
    "teamkilled": Array [],
    "teamkillers": Array [],
    "teamkills": 0,
    "totalPlayedGames": 1,
    "totalScore": 0,
    "vehicleKills": 0,
    "vehicles": Array [],
    "weapons": Array [],
  },
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "endDate": "2023-07-02T23:59:59.999Z",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 0,
        "startDate": "2023-06-26T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-26",
      },
    ],
    "deaths": Object {
      "byTeamkills": 0,
      "total": 0,
    },
    "id": "mogus",
    "isShow": true,
    "kdRatio": 0,
    "killed": Array [],
    "killers": Array [],
    "kills": 0,
    "killsFromVehicle": 0,
    "killsFromVehicleCoef": 0,
    "lastPlayedGameDate": "2023-06-30T18:00:00.000Z",
    "lastSquadPrefix": "[A]",
    "name": "mogus",
    "teamkilled": Array [],
    "teamkillers": Array [],
    "teamkills": 0,
    "totalPlayedGames": 1,
    "totalScore": 0,
    "vehicleKills": 0,
    "vehicles": Array [],
    "weapons": Array [],
  },
]
`;

exports[`getPlayerId func should work correctly Other players statistics calculation should work correctly 1`] = `
Array [
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "endDate": "2023-09-03T23:59:59.999Z",
        "kdRatio": 3,
        "kills": 3,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 3,
        "startDate": "2023-08-28T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-35",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "endDate": "2023-04-16T23:59:59.999Z",
        "kdRatio": 3,
        "kills": 3,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 3,
        "startDate": "2023-04-10T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-15",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 0,
        },
        "endDate": "2022-11-06T23:59:59.999Z",
        "kdRatio": 3,
        "kills": 3,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 3,
        "startDate": "2022-10-31T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2022-44",
      },
    ],
    "deaths": Object {
      "byTeamkills": 0,
      "total": 0,
    },
    "id": "1",
    "isShow": true,
    "kdRatio": 9,
    "killed": Array [
      Object {
        "count": 9,
        "id": "4",
        "name": "[A]borigen",
      },
    ],
    "killers": Array [],
    "kills": 9,
    "killsFromVehicle": 0,
    "killsFromVehicleCoef": 0,
    "lastPlayedGameDate": "2023-09-01T18:00:00.000Z",
    "lastSquadPrefix": "[W8]",
    "name": "AllCash",
    "teamkilled": Array [],
    "teamkillers": Array [],
    "teamkills": 0,
    "totalPlayedGames": 3,
    "totalScore": 3,
    "vehicleKills": 0,
    "vehicles": Array [],
    "weapons": Array [
      Object {
        "kills": 9,
        "maxDistance": 100,
        "name": "M4A1",
      },
    ],
  },
  Object {
    "byWeeks": Array [
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 1,
        },
        "endDate": "2023-09-03T23:59:59.999Z",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 0,
        "startDate": "2023-08-28T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-35",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 1,
        },
        "endDate": "2023-04-16T23:59:59.999Z",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 0,
        "startDate": "2023-04-10T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2023-15",
      },
      Object {
        "deaths": Object {
          "byTeamkills": 0,
          "total": 1,
        },
        "endDate": "2022-11-06T23:59:59.999Z",
        "kdRatio": 0,
        "kills": 0,
        "killsFromVehicle": 0,
        "killsFromVehicleCoef": 0,
        "score": 0,
        "startDate": "2022-10-31T00:00:00.000Z",
        "teamkills": 0,
        "totalPlayedGames": 1,
        "vehicleKills": 0,
        "week": "2022-44",
      },
    ],
    "deaths": Object {
      "byTeamkills": 0,
      "total": 3,
    },
    "id": "4",
    "isShow": true,
    "kdRatio": 0,
    "killed": Array [],
    "killers": Array [
      Object {
        "count": 3,
        "id": "1",
        "name": "[W8]AllCash",
      },
    ],
    "kills": 0,
    "killsFromVehicle": 0,
    "killsFromVehicleCoef": 0,
    "lastPlayedGameDate": "2023-09-01T18:00:00.000Z",
    "lastSquadPrefix": "[A]",
    "name": "borigen",
    "teamkilled": Array [],
    "teamkillers": Array [],
    "teamkills": 0,
    "totalPlayedGames": 3,
    "totalScore": 0,
    "vehicleKills": 0,
    "vehicles": Array [],
    "weapons": Array [],
  },
]
`;
